plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.2'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    implementation 'org.mariadb.jdbc:mariadb-java-client'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

    // WebSocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security:3.4.2'
    testImplementation 'org.springframework.security:spring-security-test:6.4.2'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // Oauth2
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // Automate mapping between XML documents and Java objects
    implementation 'javax.xml.bind:jaxb-api:2.3.1'

    //Model Mapper
    implementation 'org.modelmapper:modelmapper:3.2.2'

    // Read env from properties
    implementation 'me.paulschwarz:spring-dotenv:4.0.0'

    // Test (JUnit, Mockito, AssertJ)
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
    testImplementation 'org.mockito:mockito-core:5.15.2'
    testImplementation 'org.assertj:assertj-core:3.27.3'

    // AWS S3 Bucket
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

    implementation 'org.seleniumhq.selenium:selenium-java:4.16.1'

    // Jsoup 라이브러리 추가
    implementation 'org.jsoup:jsoup:1.15.3'

    // WebDriverManager (ChromeDriver 자동 관리)
    implementation 'io.github.bonigarcia:webdrivermanager:5.3.0'

    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.15.0' // 최신 버전 사용

}

tasks.named('test') {
    useJUnitPlatform()
}
